# deebs

./: .gitignore  LICENSE  README.md  deebs.py  pyproject.toml
src/: __init__.py
src/deebs/: deebs.css  deebs.py
